<resources>
    <string name="app_name">Sandesh</string>
    <string name="sandes">Sandesh</string>
    <string name="a_chat_application">A Chat Application</string>
    <string name="otp_warning">An OTP will be sent to the entered mobile number</string>
    <string name="enter_your_number_here">Enter your number here</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp">Enter the OTP that you recieved</string>
    <string name="verify">Verify</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="otp_not_received">Did not received OTP? Change number</string>
    <string name="save_your_profile">Save your profile</string>
    <string name="create">Create</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="click_here_to_update_profile">Click here to update profile</string>
    <string name="update_profile">Update profile</string>
</resources>