<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:id="@+id/logo"
        android:layout_marginTop="70dp"
        android:src="@drawable/otp_logo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textHeading"
        android:text="@string/otp_warning"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/cormorant_garamond_semibold"
        android:layout_below="@+id/logo"
        android:padding="10dp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/centerHorizontalLine">
    </RelativeLayout>

    <com.hbb20.CountryCodePicker
        android:id="@+id/countryCodePicker"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:ccp_areaCodeDetectedCountry="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        app:ccp_autoDetectCountry="true"
        android:layout_above="@id/centerHorizontalLine"/>

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:inputType="number"
        android:background="@drawable/round_corner_box"
        android:layout_below="@id/centerHorizontalLine"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_number_here"/>

    <android.widget.Button
        android:id="@+id/getOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_buttons_blue"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/get_otp"
        android:textColor="@color/white"
        android:layout_below="@id/phoneNumber"
        android:layout_marginTop="70dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/getOTP"
        android:layout_marginTop="30dp"
        android:visibility="invisible"/>

</RelativeLayout>